--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,15 +8,8 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
-strategy:
-  matrix:
-    Python27:
-      python.version: '2.7'
-    Python35:
-      python.version: '3.5'
-    Python36:
-      python.version: '3.6'
-    Python37:
+
+variables:
       python.version: '3.7'
 
 steps:
@@ -34,3 +27,13 @@ steps:
     pip install pytest pytest-azurepipelines
     pytest
   displayName: 'pytest'
+
+- task: CmdLine@2
+  inputs:
+    script: 'python setup.py sdist'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: 'dist'
+    ArtifactName: 'dist'
+    publishLocation: 'Container'
