Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
 
 - task: CmdLine@2
   inputs:
-    script: 'python setup.py sdist'
+    script: 'python startup.py sdist'
 
 - task: PublishBuildArtifacts@1
   inputs:
