--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,6 @@ steps:
 
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: 'dist'
+    PathtoPublish: 'sdist'
     ArtifactName: 'dist'
     publishLocation: 'Container'
